# windows-contextmenu-manager-tauri

./: .gitignore  README.md  index.html  package.json  tsconfig.json
.github/workflows/: build.yml  release.yml  test.yml
blog/: Introduction-To-Windows-ContextMenu-Manager.md  index.md
src/: App.css  App.tsx  lib.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/i18n/: en-us.json  index.ts  zh-cn.json
