[package]
name = "windows-contextmenu-manager"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Windows ContextMenu Manager Tauri"
repository = "https://github.com/ahaoboy/windows-contextmenu-manager-tauri"
homepage = "https://github.com/ahaoboy/windows-contextmenu-manager-tauri"
authors = ["ahaoboy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "windows_contextmenu_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wcm = { path = "../../wcm" }
is-admin = { version = "0.1", git = "https://github.com/ahaoboy/is-admin" }
